[package]
name = "rudim"
version = "2.1.3"
edition = "2024"

[dependencies]
bitflags = "2.11.1"

[dev-dependencies]
criterion = "0.8.2"
serial_test = "3.1"

[[bench]]
name = "search_benchmark"
harness = false

[profile.dev]
debug = true
debug-assertions = true

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
