[package]
name = "rudim"
version = "3.0.2"
edition = "2024"

[dependencies]
bitflags = "2.12.1"
bulletformat = "1.8.0"
bullet_lib = { path = "deps/bullet/crates/bullet_lib", package = "bullet_lib" }
rand = "0.9.0"


[features]
default = []
cuda = ["bullet_lib/cuda"]
rocm = ["bullet_lib/rocm"]

[dev-dependencies]
criterion = "0.8.2"
serial_test = "3.5"

[[bench]]
name = "search_benchmark"
harness = false

[profile.dev]
debug = true
debug-assertions = true

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
